src/components/Gantt/Header/Header.less
@import '../../../less/colors.less';

.gantt-header {
  display: flex;

  &__title {
    position: absolute;
    width: 208px;
    height: 79px;
    padding: 5px 10px;
    border: 1px solid @light-gray;
    background: @white;
  }

  &__year {
    margin-left: 230px;

    &-title {
      padding: 5px 10px;
      text-align: center;
      border: 1px solid @light-gray;
      border-right: none;
  
      &:first-child {
        border-left: none;
      }
    }

    &-content {
      display: flex;
    }

    &:not(:nth-of-type(2)) {
      margin-left: 0px;
      border-left: 1px solid @light-gray;
    }
  }

  &__month {
    &-title {
      padding: 5px;
      text-align: center;
    }

    &-content {
      display: flex;
    }

    &:last-child {
      .gantt-header__day:last-child {
        border-right: none;
      }
    }

    &:not(:last-child) &-title {
      border-right: 1px solid @light-gray;
    }
  }

  &__day {
    width: 18px;
    padding: 5px;
    border: 1px solid @light-gray;
    border-right: none;
    text-align: center;

    &:first-child {
      border-left: none;
    }

    &:last-child {
      border-right: 1px solid @light-gray;
    }

    &--weekend {
      background: #f1f1f1;
    }
  }
}

